--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
       <label for="bill-amount">Bill Amount:</label>
       <input id="bill-amount" type="text" />
-      <label for="cash-given">Cash Given:</label>
+
+      <button id="next-button">Next</button>
+
+      <label for="cash-given" id="label">Cash Given:</label>
       <input id="cash-given" type="text" />
 
       <button id="check-button">Check</button>
-      <p id="error-message"></p>
 
       <table class="change-table">
         <caption>
@@ -48,6 +50,8 @@
           <td>1</td>
         </tr>
       </table>
+
+      <p id="error-message"></p>
     </div>
   </body>
   <script src="./index.js"></script>
